--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,14 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    google()
+}
+
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
@@ -27,19 +33,20 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-
+    compile 'org.apache.commons:commons-lang3:3.6'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
     testCompile 'junit:junit:4.12'
-
     //CardView and RecyclerView
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
-
     // for Retrofit and GSON library
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-
     //Picasso Image loader Library
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //glide
+    implementation files('libs/glide-full-4.5.0.jar')
+    //implementation 'com.github.bumptech.glide:glide:4.5.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
 }
