--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecipeSteps" />
+        <activity android:name=".RecipeStepsActivity" />
         <activity android:name=".RecipeIngredients" />
-        <activity android:name=".RecipeStepsSnap" />
-        <activity android:name=".RecipeStepInstruction"></activity>
+        <activity android:name=".RecipeStepInstruction" />
     </application>
 
 </manifest>
