--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,23 +19,33 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecipeStepsActivity"
+        <activity
+            android:name=".RecipeStepsActivity"
             android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"></meta-data>
+                android:value=".MainActivity" />
         </activity>
         <activity android:name=".RecipeIngredients">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".RecipeStepsActivity"></meta-data>
+                android:value=".RecipeStepsActivity" />
         </activity>
         <activity android:name=".RecipeStepInstruction">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".RecipeStepsActivity"></meta-data>
+                android:value=".RecipeStepsActivity" />
         </activity>
 
+        <receiver android:name=".BakingWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/baking_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
