--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,6 @@
                 android:value=".MainActivity" />
         </activity>
 
-        <service android:name=".widget.UpdateBakingService"/>
 
         <activity android:name=".RecipeIngredients">
             <meta-data
@@ -40,14 +39,18 @@
                 android:value=".RecipeStepsActivity" />
         </activity>
 
+        <service android:name=".widget.BakingWidgetService"></service>
 
-        <service android:name=".widget.GridWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+        <service
+            android:name=".widget.BakingWidgetGridService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
-        <receiver android:name=".widget.BakingWidgetProvider" android:icon="@drawable/example_appwidget_preview">
+
+        <receiver android:name=".widget.BakingWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE2" />
+                <action android:name="PLEASE_PLAY"/>
             </intent-filter>
 
             <meta-data
